--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
   <h1>Hi there</h1>
   <p>Welcome to my website!</p>
-  <img src="https://drive.google.com/open?id=1My9JBeCpkt6kzlDfU9rGSd4MUKDItWDL&authuser=mlee%40ai-systems.ca&usp=drive_fs" />
+  <img src="https://drive.google.com/file/d/1My9JBeCpkt6kzlDfU9rGSd4MUKDItWDL/view?usp=sharing" />
+  
 </body>
 
 </html>
