--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <body>
   <h1>Hi there</h1>
   <p>Welcome to my website!</p>
-  <img src="https://drive.google.com/file/d/1My9JBeCpkt6kzlDfU9rGSd4MUKDItWDL/view?usp=sharing" />
+  
+  <iframe src="https://drive.google.com/file/d/1My9JBeCpkt6kzlDfU9rGSd4MUKDItWDL/preview" width="640" height="480" allow="autoplay"></iframe>
+  
+
   
 </body>
 
