--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <h1>Hi there</h1>
   <p>Welcome to my website!</p>
   
-  <iframe src="https://drive.google.com/file/d/1My9JBeCpkt6kzlDfU9rGSd4MUKDItWDL/preview" width="640" height="480" allow="autoplay"></iframe>
+  <img src="https://lh3.googleusercontent.com/WDf69rz4XvyGOJ345RzG8q7ZLTSwC-Zwgn-ssvSw8jS2-TUO3JmMVgZOMGipkUJFTl6bYaoqr3v5nEXC8SPQ1INnEpcmUuFuH9MenGv1q3L9vJoJcl9z-WXH-WQIsXaK5DvQihSb2Q=w2400"/>
   
 
   
